--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,8 @@ frontmatter_file_url_template: "/uploads/:year:/:month:/:day:"
 body_file_url_template: "/uploads/:year:/:month:/:day:"
 new_page_extension: md
 auto_deploy: false
-admin_path: 
-webhook_url: 
-collections: ''
+admin_path:
+webhook_url:
+collections:
+  _blue:
+    default_front_matter_template: blue-template
