--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,11 +1,11 @@
 ---
-upload_path: "/uploads/:year:/:month:/:day:"
-frontmatter_file_url_template: "/uploads/:year:/:month:/:day:"
-body_file_url_template: "/uploads/:year:/:month:/:day:"
+upload_path: "/images"
+frontmatter_file_url_template: "/images"
+body_file_url_template: "/images"
 new_page_extension: md
 auto_deploy: false
-admin_path: 
-webhook_url: 
+admin_path:
+webhook_url:
 collections:
   _blue:
     default_front_matter_template: blue-template
