--- a/.forestry/front_matter/templates/red-template.yml
+++ b/.forestry/front_matter/templates/red-template.yml
@@ -6,7 +6,7 @@ fields:
   label: Title
   default: ''
 - type: datetime
-  default: Invalid date
+  default: ''
   label: Date
   name: date
 - type: tag_list
